--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
               duration: 2500,
               gravity: "top",
               position: "right",
-              backgroundColor: "linear-gradient(to right, #00b09b, #96c93d)",
+              backgroundColor: "linear-gradient(to right, #42A5F5, #4CAF50)",
               close: true,
             }).showToast();
           })
